--- a/blog-project/src/main/resources/templates/layouts/header.mustache
+++ b/blog-project/src/main/resources/templates/layouts/header.mustache
@@ -48,3 +48,12 @@
         </div>
     </div>
 </nav>
+
+<!-- alert msg-->
+
+{{#msg}}
+    <div class = "alert alert-primary alert-dismissable">
+        {{msg}}
+        <button type ="button" class="btn-close" data-bs-dismiss = "alert" aria-label="Close"></button>
+    </div>
+{{/msg}}
