댓글 수정 기능 구현

--- a/blog-project/src/main/resources/templates/comments/_new.mustache
+++ b/blog-project/src/main/resources/templates/comments/_new.mustache
@@ -50,7 +50,7 @@
             ).then(response =>{
             const msg = (response.ok) ? "댓글이 등록되었습니다" : "댓글 등록 실패";
             alert(msg);
-            window,location.reload();
+            window.location.reload();
             })
         }
     );
