댓글 삭제 기능 구현

--- a/blog-project/src/main/resources/templates/comments/_list.mustache
+++ b/blog-project/src/main/resources/templates/comments/_list.mustache
@@ -15,6 +15,12 @@
                 >
                     수정
                 </button>
+                <!--댓글 삭제 버튼-->
+                <button type = "button"
+                        class = "btn btn-sm btn-outline-danger comment-delete-btn"
+                        data-comment-id="{{id}}"
+                >삭제
+                </button>
             </div>
             <div class = "card-body">
                 {{body}}
@@ -134,9 +140,43 @@
 
 
  }
-
 </script>
 
+<script>
+    //삭제 버튼 선택
+     const commentDeleteBtns =document.querySelectorAll(".comment-delete-btn");
 
+     //삭제 버튼 이벤트
+    commentDeleteBtns.forEach(btn => {
+    //각 버튼 이벤트 처리를 위해 등록
+        btn.addEventListener("click",() => {
+            // 이벤트 발생 요소 선택
+            const commentDeleteBtn = event.srcElement;
+
+            //삭제 댓글 id 가져오기
+            const commentId = commentDeleteBtn.getAttribute("data-comment-id");
+            console.log(`삭제 버튼 클릭 : ${commentId}번 댓글`);
+
+            //삭제 api 호출 및 처리
+            const url = `/api/comments/${commentId}`;
+            fetch(url,{
+                method : "DELETE"
+
+            }).then(response => {
+                //댓글 삭제 실패 처리
+                if (!response.ok){
+                    alert("댓글 삭제 실패");
+                    return;
+                }
+
+                //삭제 성공시 댓글을 화면에서 지움
+
+                const target = document.querySelector(`#comments-${commentId}`);
+                target.remove();
+            });
+        });
+    });
+
+</script>
 
 
